# Dungeon-Master

./: .gitignore  .gitmodules  CLAUDE.md  DISCORD_SETUP.md  README.md  RENDERING_SUMMARY.md  TODO  TODO.md  alembic.ini  architecture.md  charactersheet_template.json  demo_terminal.py  docker-compose.yml  enemy_template.json  example_charactersheet.json  example_enemy.json  pyproject.toml  render_rules.py  test.py  test_box_example.py
alembic/: README  env.py
alembic/versions/: 001_initial_schema.py
design/: TurnManagment.md  architecture.md  combat_architecture_analysis.md  combat_example_walkthrough.md  effect_descriptions_design.md  reaction_architecture_documentation.md  step_completion_gm_pattern.md
scripts/: validate_characters.py
scripts/db/: analyze_dangling_references.py  build_lance_rules_db.py  example_lance_usage.py  render_and_build.py  step1_render_rules.py  step2_build_database.py  step3_test_database.py
src/: app.py  main.py
src/agents/: agents.py  combat_state_extractor.py  (+17 more)
tests/: __init__.py  conftest.py  test_combat_transitions.py  test_dm_tools.py  test_effect_agent.py  test_effect_agent_context_builder.py  test_history_processor.py  test_hp_and_resource_agents.py  test_hybrid_search.py  test_lance_rules_service.py  test_lifecycle_agent.py  test_memory_config.py  test_memory_integration.py  test_monster.py  test_monster_spawner.py  test_multiplayer_coordination.py  test_rules_cache_service.py  test_specialized_extractors.py  test_state_command_executor.py  test_state_commands_extended.py  test_state_extraction.py  test_summarizer.py
(+128 files in other folders)
