[project]
name = "dnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.26.0",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.6",
    "qdrant-client>=1.15.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "flask",
]
