[project]
name = "dnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "flask",
    "pydantic-ai>=1.2.1",
    "lancedb>=0.13.0",
    "sentence-transformers>=2.0.0",
]
