[project]
name = "dnd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.7",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "flask",
    "pydantic-ai>=1.2.1",
    "lancedb>=0.5.0",
    "discord.py>=2.3.0",
    # Phase 2: Database dependencies
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=25.5.0",
]
